make my profile prettier

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <body>
 <div class="container">
     <div class="card-white">
-      <h1>Rodrigo Ho-Reis 🤟</h1>
+      <h1>Rodrigo Reis</h1>
       <img src="images/photo.png" class="image-circle">
-      <h2>Aspiring developer 💻</h2>
+      <h2>Full Stack Web Developer 💻</h2>
       <p>24 year old Business Graduate from Les Roches Switzerland<br>experience in accounting/finance.
       Learnign software development at  <a href="https://www.lewagon.com" target="_blank">Le Wagon</a> hoping to synergize the two</p>
       <button type="button">Place holder button!</button>
