--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <link rel="stylesheet" href="estilo.css">
       <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300&family=DM+Mono:ital@1&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-      <title>Rodrigo Ho-Reis Protfolio</title>
+      <title>Rodrigo Ho-Reis Portfolio</title>
       <meta name="Rodrigo Landing Page" content="Smoll bois first landing Page">
       <meta charset="utf-8">
   </head>
