--- a/avenza_export.html
+++ b/avenza_export.html
@@ -71,6 +71,7 @@
 				prefixUrl: 'index_data/',
 				enableZoomSelection: true,
 				minZoomImageRatio: 0.9
+				enableWebTags: true,
 			});
 		});
 	</script>
